fixed naming in api doc, finished rest api for phenology & physiognomy
